# agent42

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: snape-review.yml  squad-ci.yml  squad-promote.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/casting/: history.json  policy.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-05-09T12-35-07Z-pr-promotion.md  2026-05-09T13:32:24Z-ci-ai-gate.md  2026-05-09T15-39-28.269+02-00-chat-session-core.md
.squad/orchestration-log/: 2026-05-09T12-35-07Z-moody.md  2026-05-09T13:32:24Z-moody.md  2026-05-09T15-39-28.269+02-00-hermione.md  2026-05-09T15-39-28.269+02-00-lupin.md  2026-05-09T15-39-28.269+02-00-moody.md
design/: claude-design-followup-prompt.md  component-inventory.md  handoff.md  tokens.css  tokens.json
docs/: 01-product-overview.md  02-ui-description.md  03-user-flows.md  04-technical-architecture.md  05-tech-stack.md  06-squad-integration.md  07-auth-strategy.md  08-repo-management.md  09-data-models.md  10-development-workflow.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/ui/: Button.tsx  (+2 more)
src/lib/: singleFlight.ts  tauri.ts  tokens.ts
src/screens/: ChatWindow.tsx  Home.tsx  SignIn.tsx  homeOnboarding.ts
src/store/: sessions.ts
src/types/: index.ts
test/: chatHeaderControls.test.tsx  homeOnboarding.test.ts  singleFlight.test.ts
(+34 files in other folders)
